--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
   <body>
     <header class="navbar-container">
-      <!-- <div class="logo">
+      <div class="logo">
         <img src="Asset/logo.png" alt="Logo" />
-      </div> -->
+      </div>
       <nav class="nav-list">
         <ul>
           <li><a href="#home">Beranda</a></li>
@@ -111,8 +111,5 @@
         </div>
       </aside>
     </main>
-    
-
-    
   </body>
 </html>
